# dspace-statistics-api

./: .build.yml  .drone.yml  .hound.yml  .travis.yml  CHANGELOG.md  Pipfile  README.md  app.py  build.yml  config.py  database.py  indexer.py  pyproject.toml  pytest.ini  renovate.json  requirements-dev.txt  requirements.txt  solr.py
.github/workflows/: python-app.yml
contrib/: cgspace-statistics-api.service  dspace-statistics-api.service  dspace-statistics-indexer.service  dspace-statistics-indexer.timer
dspace_statistics_api/: app.py  config.py  database.py  indexer.py  items.py  solr.py  stats.py  util.py
dspace_statistics_api/docs/: index.html  openapi.json
tests/: dspacestatistics.sql  test_api.py  test_api_collections.py  test_api_communities.py  test_api_docs.py  test_api_items.py
