[tool.poetry]
name = "dspace-statistics-api"
version = "1.4.4-dev"
description = "A simple REST API to expose Solr view and download statistics for items, communities, and collections in a DSpace repository."
authors = ["Alan Orth <aorth@mjanja.ch>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.7"
gunicorn = "^20.0.4"
falcon = "3.1.1"
psycopg2 = "^2.9.1"
requests = "^2.24.0"
falcon-swagger-ui = {git = "https://github.com/alanorth/falcon-swagger-ui.git", rev="falcon3-update-swagger-ui"}

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^6.1.1"
black = {version = "^22.1.0", python = ">=3.6.2"}
isort = {version = "^5.9.1", python = ">=3.6.1"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
